--- a/css/org.css
+++ b/css/org.css
@@ -56,10 +56,16 @@
        url('fonts/open-sans-v18-latin-ext_latin-800.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-img {
-    max-width: 800px;
-    width: 100%;
-    height: auto;
+@media only screen and (min-width: 768px) {
+    img {
+        max-width: 800px;
+    }
+}
+@media only screen and (max-width: 768px) {
+    img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 body {
